# cryptoutils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_libff.sh
include/Bech32/: segwit_addr.h
include/Snark/: Snark.h
lib/Bech32/: CMakeLists.txt  segwit_addr.c  segwit_addr.cpp
lib/Snark/: CMakeLists.txt  Snark.cpp
lib/ethash/: CMakeLists.txt
